k8s/ai-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-service

spec:
  selector:
    app: ai-service

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
