k8s/auth-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: auth-service

spec:
  selector:
    app: auth-service

  ports:
    - port: 8081
      targetPort: 8081

  type: ClusterIP
