k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: medmatch-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: medmatch.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
